# DocEnv

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_heuristic.py  test_random.py
bonus_rl/: evaluate.py  gemini_agent.py  gym_wrapper.py  train_ppo.py
ppo_hospital/: evaluations.npz
server/: app.py  environment.py
